# todo-django-app

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: build_and_push.yaml
app/: settings.py  urls.py
dmd_app/: views.py
dmd_app/templates/dmd_app/: markdown_content.html
kubernetes/: manifest.yml
markdown_app/: urls.py
todo-django-app/: settings.py
todos/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
todos/templates/todos/: todo_detail.html  todo_form.html  todo_list.html
